@@ -474,14 +474,15 @@ static SEL selectorForKeyEvent(KeyboardEvent* event)
     // FIXME: This helper function is for the auto-fill code so the bridge can pass a selector to the form delegate.  
     // Eventually, we should move all of the auto-fill code down to WebKit and remove the need for this function by
     // not relying on the selector in the new implementation.
+    // The key identifiers are from <http://www.w3.org/TR/DOM-Level-3-Events/keyset.html#KeySet-Set>
     String key = event->keyIdentifier();
     if (key == "Up")
         return @selector(moveUp:);
     if (key == "Down")
         return @selector(moveDown:);
-    if (key == "U+00001B")
+    if (key == "U+001B")
         return @selector(cancel:);
-    if (key == "U+000009") {
+    if (key == "U+0009") {
         if (event->shiftKey())
             return @selector(insertBacktab:);
         return @selector(insertTab:);
